fix: Redact nested secrets from memory and traces